2022-07-21 Se agrega formulario edit a OT.

--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Asignar.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Asignar.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Detalles de Solicitud de Órden de Trabajo";
     ViewBag.PrimerNivel = "orden_trabajo";
-    ViewBag.SegundoNivel = "mis_solicitudes";
+    ViewBag.SegundoNivel = "ListadoAsignacionPendientes";
     ViewBag.ControllerName = "OrdenesTrabajo";
 
 
